--- a/pjfinal/package.json
+++ b/pjfinal/package.json
@@ -4,22 +4,31 @@
   "private": true,
   "dependencies": {
     "@ant-design/charts": "^2.0.3",
+    "@react-pdf/renderer": "^3.3.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.8.3",
     "axios": "^1.4.0",
+    "browserify-fs": "^1.0.0",
     "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
+    "fs": "^0.0.1-security",
+    "jpeg-exif": "^1.1.4",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-icons": "^5.0.1",
+    "react-pdf": "^7.7.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
