--- a/pjfinal/package.json
+++ b/pjfinal/package.json
@@ -33,6 +33,7 @@
     "recharts": "^2.11.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
+    "sweetalert2": "^11.10.5",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4",
     "webpack": "^4.47.0"
