--- a/pjfinal/package.json
+++ b/pjfinal/package.json
@@ -21,6 +21,7 @@
     "jspdf-autotable": "^3.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-highlight-words": "^0.20.0",
