--- a/pjfinal/package.json
+++ b/pjfinal/package.json
@@ -2,6 +2,7 @@
   "name": "pjfinal",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:5000/",
   "dependencies": {
     "@ant-design/charts": "^2.0.3",
     "@react-pdf/renderer": "^3.3.4",
