--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
     tty: true
   db:
       container_name: db
-      # command: --default-authentication-plugin=mysql_native_password
+      command: --default-authentication-plugin=mysql_native_password
       image: mysql
       restart: always
       environment:
