--- a/server-flask/dockerfile
+++ b/server-flask/dockerfile
@@ -1,39 +1,39 @@
-FROM python:3.11.4
+FROM python:3.12.2-alpine3.19
 
-# # Install apk
-# RUN apk update && apk add --no-cache apk-tools
-
-# # Install system dependencies
-# RUN apk add --no-cache \
-#     gcc \
-#     go \
-#     git \
-#     musl-dev \
-#     libxml2-dev \
-#     libxslt-dev \
-#     mariadb-dev \
-#     mysql-dev
-
-# # Set environment variables for mysqlclient
-# ENV MYSQLCLIENT_CFLAGS="-I/usr/include/mysql"
-# ENV MYSQLCLIENT_LDFLAGS="-L/usr/lib/mysql"
-
+# Install system dependencies
+RUN apk add --no-cache \
+    gcc \
+    go \
+    git \
+    musl-dev \
+    libxml2-dev \
+    libxslt-dev \
+    mariadb-dev \
+    mysql-dev
+RUN apk add --no-cache chromium chromium-chromedriver curl
+RUN apk add --no-cache chromium chromium-chromedriver
+# Set environment variables for mysqlclient
+ENV MYSQLCLIENT_CFLAGS="-I/usr/include/mysql"
+ENV MYSQLCLIENT_LDFLAGS="-L/usr/lib/mysql"
+ENV PATH="/usr/lib/chromium/:${PATH}"
 # Set the working directory
-WORKDIR /pj2566new/server-flask
+WORKDIR /server-flask
 
 # Copy the application files into the container
 COPY . .
 
-# # Clone gobuster
-# RUN git clone https://github.com/OJ/gobuster.git
+# Clone gobuster
+RUN git clone https://github.com/OJ/gobuster.git
 
-# # Build gobuster and move it to /usr/local/bin
-# WORKDIR /pj2566new/server-flask/gobuster
-# RUN go build
-# RUN mv gobuster /usr/local/bin
+# Build gobuster and move it to /usr/local/bin
+WORKDIR /server-flask/gobuster
+RUN go build
+RUN mv gobuster /usr/local/bin
+
+
 
 # Move back to the project directory and install Python dependencies
-WORKDIR /pj2566new/server-flask
+WORKDIR /server-flask
 RUN pip install Flask[async]
 RUN pip install Flask-Cors
 RUN pip install requests
@@ -43,7 +43,9 @@ RUN pip install mysql-connector-python
 RUN pip install Flask-MySQLdb
 RUN pip install pyjwt
 RUN pip install lxml
-
+RUN pip install selenium
+RUN pip install pillow
+RUN pip install chromedriver-binary
 # Expose port 5000
 EXPOSE 5000
 
