--- a/server-flask/dockerfile
+++ b/server-flask/dockerfile
@@ -10,14 +10,13 @@ RUN apk add --no-cache \
     libxslt-dev \
     mariadb-dev \
     mysql-dev
-RUN apk add --no-cache chromium chromium-chromedriver curl
-RUN apk add --no-cache chromium chromium-chromedriver
+
 # Set environment variables for mysqlclient
 ENV MYSQLCLIENT_CFLAGS="-I/usr/include/mysql"
 ENV MYSQLCLIENT_LDFLAGS="-L/usr/lib/mysql"
-ENV PATH="/usr/lib/chromium/:${PATH}"
+
 # Set the working directory
-WORKDIR /server-flask
+WORKDIR /robo/backend-flask
 
 # Copy the application files into the container
 COPY . .
@@ -26,14 +25,12 @@ COPY . .
 RUN git clone https://github.com/OJ/gobuster.git
 
 # Build gobuster and move it to /usr/local/bin
-WORKDIR /server-flask/gobuster
+WORKDIR /robo/backend-flask/gobuster
 RUN go build
 RUN mv gobuster /usr/local/bin
 
-
-
 # Move back to the project directory and install Python dependencies
-WORKDIR /server-flask
+WORKDIR /robo/backend-flask
 RUN pip install Flask[async]
 RUN pip install Flask-Cors
 RUN pip install requests
@@ -43,11 +40,9 @@ RUN pip install mysql-connector-python
 RUN pip install Flask-MySQLdb
 RUN pip install pyjwt
 RUN pip install lxml
-RUN pip install selenium
-RUN pip install pillow
-RUN pip install chromedriver-binary
+
 # Expose port 5000
 EXPOSE 5000
 
 # Define the command to run the server
-CMD ["python", "servercommand.py"]
+CMD ["python", "servercommandv3.py"]
